logs/pbcommand.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/avro'...
Compiling './lib/python3.5/site-packages/avro/io.py'...
***   File "./lib/python3.5/site-packages/avro/io.py", line 200
    bits = (((ord(self.read(1)) & 0xffL)) |
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avro/ipc.py'...
***   File "./lib/python3.5/site-packages/avro/ipc.py", line 325
    except AvroRemoteException, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avro/schema.py'...
***   File "./lib/python3.5/site-packages/avro/schema.py", line 340
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avro/tool.py'...
***   File "./lib/python3.5/site-packages/avro/tool.py", line 85
    print "Port: %s" % server.server_port
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/avro-1.8.2.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pbcommand'...
Listing './lib/python3.5/site-packages/pbcommand/cli'...
Compiling './lib/python3.5/site-packages/pbcommand/cli/core.py'...
***   File "./lib/python3.5/site-packages/pbcommand/cli/core.py", line 254
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pbcommand/cli/examples'...
Compiling './lib/python3.5/site-packages/pbcommand/cli/quick.py'...
***   File "./lib/python3.5/site-packages/pbcommand/cli/quick.py", line 212
    print registry.to_summary()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pbcommand/engine'...
Compiling './lib/python3.5/site-packages/pbcommand/interactive_resolver.py'...
***   File "./lib/python3.5/site-packages/pbcommand/interactive_resolver.py", line 24
    print "Loaded tc {c}".format(c=tc)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pbcommand/models'...
Listing './lib/python3.5/site-packages/pbcommand/pb_io'...
Listing './lib/python3.5/site-packages/pbcommand/schemas'...
Listing './lib/python3.5/site-packages/pbcommand/services'...
Compiling './lib/python3.5/site-packages/pbcommand/services/cli.py'...
***   File "./lib/python3.5/site-packages/pbcommand/services/cli.py", line 57
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pbcommand/testkit'...
Listing './lib/python3.5/site-packages/pbcommand-0.3.29.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xmlbuilder'...
Listing './lib/python3.5/site-packages/xmlbuilder-1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
